# global-chess-challenge-2025-experiments

./: .gitignore  .gitmodules  README.md  aicrowd_submit.sh  local_evaluation.py  pyproject.toml  requirements.txt
docs/: huggingface-gated-models.md
player_agents/: README.md  llm_agent_prompt_template.jinja  random_agent_flask_server.py  random_agent_prompt_template.jinja  run_vllm.sh  sft_agent_prompt_template.jinja  stockfish_agent_flask_server.py
